<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="207dp"
        android:background="@color/colorAccent"
        android:text="@string/_9" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btn9"
        android:layout_marginStart="81dp"
        android:background="@color/colorAccent"
        android:text="@string/_8" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn9"
        android:layout_toEndOf="@+id/btn8"
        android:background="@color/colorAccent"
        android:text="@string/_7" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="146dp"
        android:background="@color/colorAccent"
        android:text="@string/_6" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn8"
        android:layout_alignStart="@+id/btn8"
        android:layout_alignTop="@+id/btn6"
        android:background="@color/colorAccent"
        android:text="@string/_5" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn7"
        android:layout_alignStart="@+id/btn7"
        android:layout_alignTop="@+id/btn6"
        android:background="@color/colorAccent"
        android:text="@string/_4" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/btn2"
        android:background="@color/colorAccent"
        android:text="@string/_3" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btn8"
        android:layout_alignLeft="@+id/btn8"
        android:layout_marginBottom="85dp"
        android:background="@color/colorAccent"
        android:text="@string/_2" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn7"
        android:layout_alignStart="@+id/btn7"
        android:layout_alignTop="@+id/btn2"
        android:background="@color/colorAccent"
        android:text="@string/_1" />

    <Button
        android:id="@+id/btndot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="22dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/dec" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn8"
        android:layout_alignStart="@+id/btn8"
        android:layout_alignTop="@+id/btndot"
        android:background="@color/colorAccent"
        android:text="@string/_0" />

    <Button
        android:id="@+id/btnclr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn7"
        android:layout_alignStart="@+id/btn7"
        android:layout_alignTop="@+id/btndot"
        android:background="@android:color/holo_red_light"
        android:text="@string/clear" />

    <Button
        android:id="@+id/btnmul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn6"
        android:layout_toEndOf="@+id/btn7"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/star" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn9"
        android:layout_toEndOf="@+id/btn7"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/slash" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn3"
        android:layout_toEndOf="@+id/btn7"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/add" />

    <Button
        android:id="@+id/btnsub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btndot"
        android:layout_toEndOf="@+id/btn7"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/dash" />

    <Button
        android:id="@+id/btnequal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn9"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/equal" />

    <TextView
        android:id="@+id/tvControl"
        android:layout_width="369dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="130dp" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="369dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@+id/tvControl"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/tvControl"
        android:layout_marginTop="68dp" />
</RelativeLayout>